# ai-underwriting

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.backend  MASTER_PLAN.md  Makefile  README.md  REPO_STATUS.md  docker-compose.override.yml  docker-compose.yml  mypy.ini  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  main.py
backend/api/: __init__.py  auth.py  documents.py  health.py
backend/config/: settings.py
backend/db/: migrations.py  mongodb.py
backend/db/migrations/versions/: 001_initial.py
backend/middleware/: __init__.py  auth.py  authorization.py
backend/models/: __init__.py  api.py  auth.py  document.py
backend/services/: cleanup.py  financial_analysis.py  logging.py  ocr.py  processing_status.py  validation.py
backend/services/extractors/: __init__.py  base.py  lease.py  operating_statement.py  pl_statement.py  rent_roll.py
docs/api/: endpoints.md  openapi.json
docs/architecture/: database.md  overview.md
docs/development/: runbook.md  setup.md  troubleshooting.md
frontend/: .env.example  eslint.config.js  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: index.ts  useApi.ts
frontend/src/pages/: Analysis.tsx  Dashboard.tsx  Login.tsx  Upload.tsx
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
tests/: __init__.py  conftest.py  test_base_extractor.py  test_document_processor.py  test_financial_analysis.py  test_health.py  test_models.py  test_mongodb.py  test_rent_roll_extractor.py
